kubernetes/deployment.yaml
# # deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: natours
# spec:
#   replicas: 3
#   selector:
#     matchLabels:
#       app: natours
#   template:
#     metadata:
#       labels:
#         app: natours
#     spec:
#       containers:
#         - name: natours
#           image: 686317197365.dkr.ecr.us-east-1.amazonaws.com/natours:latest
#           ports:
#             - containerPort: 80

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: nginx
# spec:
#   selector:
#     matchLabels:
#       app: nginx
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         app: nginx
#     spec:
#       containers:
#       - name: nginx
#         image: nginx
#         ports:
#         - containerPort: 80

apiVersion: apps/v1
kind: Deployment
metadata:
  name: natours
spec:
  replicas: 2
  selector:
    matchLabels:
      app: natours
  template:
    metadata:
      labels:
        app: natours
    spec:
      containers:
        - name: natours
          image: 686317197365.dkr.ecr.us-east-1.amazonaws.com/natours:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: natours
spec:
  selector:
    app: natours
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
